feat(mesh): add mesh networking layer + Wi‑Fi Aware & Wi‑Fi Direct/BLE adapters
- **Add full mesh layer** under `lib/src/mesh/`: router, models, enums, constants, exceptions and the high-level node API (`FlutterP2pMeshNode`) — routing, TTL, deduplication, peer announce, and file-transfer models.
- **Add transport adapters**:
  - `WifiAwareAdapter` (Dart) + native Android `WifiAwareManager.kt` — discovery, data paths and sockets.
  - `WifiDirectBleAdapter` — Wi‑Fi Direct host/client with BLE-based credential exchange fallback.
- **Integrate & document**: export mesh APIs from `lib/flutter_p2p_connection.dart` and add docs (`docs/wifi_aware.md`), contribution guide (`CONTRIBUTING.md`) and `CHAT_LOG.md`.
- **Transport improvements**: file server/download robustness, sender-aware message streams, reconnection/backoff, and clearer debug logs across `lib/src/transport/*`.
- **Tests & CI**: add unit tests for models and routing (`test/mesh_models_test.dart`, `test/mesh_router_test.dart`) and a CI workflow (`.github/workflows/ci.yaml`); update lockfiles and example deps.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,3 +2,34 @@ include: package:flutter_lints/flutter.yaml
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+analyzer:
+  language:
+    strict-casts: true      # Disallows implicit casts from dynamic (e.g., dynamic → String)
+    strict-inference: true  # Requires type annotations when types can't be inferred
+    strict-raw-types: true  # Disallows raw generic types (e.g., List instead of List<String>)
+
+
+linter:
+  # The lint rules applied to this project can be customized in the
+  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
+  # included above or to enable additional rules. A list of all available lints
+  # and their documentation is published at https://dart.dev/lints.
+  #
+  # Instead of disabling a lint rule for the entire project in the
+  # section below, it can also be suppressed for a single line of code
+  # or a specific dart file by using the `// ignore: name_of_lint` and
+  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
+  # producing the lint.
+  rules:
+    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
+    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    avoid_dynamic_calls: true # Prevents calls on dynamic types (catches type errors at compile time)
+    always_declare_return_types: true # Requires explicit return types on functions and methods
+    prefer_final_locals: true # Suggests using 'final' for local variables that aren't reassigned
+    require_trailing_commas: true # Enforces trailing commas in multi-line collections/arguments (better diffs)
+    use_build_context_synchronously: true # Warns when using BuildContext after async gaps (prevents crashes)
+    sized_box_for_whitespace: true       # Use SizedBox instead of Container for empty space (more efficient)
+    use_key_in_widget_constructors: true # Requires Key parameter in widget constructors (helps Flutter diffing)
+    prefer_const_constructors: true      # Suggests const for immutable widget instances (better performance)
+    prefer_const_literals_to_create_immutables: true # Use const for immutable collections (reduces allocations)
+    avoid_unnecessary_containers: true   # Flags Container widgets that could be simpler widgets
